// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteConfirmationModal should match snapshot with default props 1`] = `
<div>
  <div
    class="inset-0 bg-black/50 flex items-center justify-center 
            z-[50] w-full h-full overflow-hidden 
            fixed top-0 left-0 right-0 bottom-0"
  >
    <div
      class="bg-white dark:bg-gray-800 rounded-lg p-6 
                max-w-md w-full mx-4 shadow-2xl"
    >
      <div
        class="flex items-center text-red-600 dark:text-red-400 mb-4"
      >
        <svg
          class="w-6 h-6 mr-2"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
        <h3
          class="text-lg font-semibold"
        >
          Confirm Deletion
        </h3>
      </div>
      <p
        class="text-gray-700 dark:text-gray-300 mb-6"
      >
        Are you sure you want to delete
         "
        this item
        "?
        <br />
        <br />
        This action cannot be undone.
      </p>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="px-4 py-2 border border-gray-300 dark:border-gray-600 
                        rounded-md text-gray-700 dark:text-gray-300 
                        hover:bg-gray-50 dark:hover:bg-gray-700 cursor-pointer"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 bg-red-600 hover:bg-red-700 
                        text-white rounded-md disabled:opacity-50 cursor-pointer"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeleteConfirmationModal should show loading state when isLoading is true 1`] = `
<div>
  <div
    class="inset-0 bg-black/50 flex items-center justify-center 
            z-[50] w-full h-full overflow-hidden 
            fixed top-0 left-0 right-0 bottom-0"
  >
    <div
      class="bg-white dark:bg-gray-800 rounded-lg p-6 
                max-w-md w-full mx-4 shadow-2xl"
    >
      <div
        class="flex items-center text-red-600 dark:text-red-400 mb-4"
      >
        <svg
          class="w-6 h-6 mr-2"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
        <h3
          class="text-lg font-semibold"
        >
          Confirm Deletion
        </h3>
      </div>
      <p
        class="text-gray-700 dark:text-gray-300 mb-6"
      >
        Are you sure you want to delete
         "
        this item
        "?
        <br />
        <br />
        This action cannot be undone.
      </p>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="px-4 py-2 border border-gray-300 dark:border-gray-600 
                        rounded-md text-gray-700 dark:text-gray-300 
                        hover:bg-gray-50 dark:hover:bg-gray-700 cursor-pointer"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 bg-red-600 hover:bg-red-700 
                        text-white rounded-md disabled:opacity-50 cursor-pointer"
          disabled=""
        >
          Deleting...
        </button>
      </div>
    </div>
  </div>
</div>
`;
